hr styling added

--- a/src/components/book/Book.css
+++ b/src/components/book/Book.css
@@ -15,7 +15,6 @@
   background-color: #ccc;
   box-shadow: 1px 1px 3px 3px #ddd inset, -1px -1px 1px 1px #aaa inset;
 }
-
 .book h3 {
-  margin-top: 0;
+  margin-top: 10px;
 }
